chapter-05/01-netpol/mynetpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: target-pod-policy
spec:
  podSelector:
    matchLabels:
      app: target-pod
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: pod-a
    - podSelector:
        matchLabels:
          app: pod-b
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: pod-a
    - podSelector:
        matchLabels:
          app: pod-b
